--- a/views/what.jade
+++ b/views/what.jade
@@ -19,19 +19,21 @@ block content
             .en One-to-One Executive Leadership Coaching
 
           p
-            .fr Evolution Coaching accompagne des leaders, cadres supérleurs ou des membres de comité de direction sur des questions telles que:
+            .fr Evolution Coaching accompagne des leaders, cadres supérieurs ou des membres de comité de direction sur des questions telles que:
             .en Evolution Coaching accompanies leaders, senior managers or C-Suite members on matters such as:
           
           ul
-            li
-                .fr La clarification de la stratégie et l’alignment des priorités et des actions
-                .en Clarification of strategy, alignment of priorities and actions
-            li
-                .fr Reconnecter au sens de la vie et le sens du rôle professionnel.
-                .en Reconnecting meaning and purpose on professional and personal journey
-            li
-                .fr L’Optimisation de la fluidité de la dynamique organisationnelle.
-                .en Optimising team effectiveness
+            li 
+              .fr La clarification de la stratégie et l’alignement des priorités et des actions
+              .en Clarification of strategy, alignment of priorities and actions
+            li 
+              .fr Reconnecter au sens de sa vie et le but de son  rôle professionnel 
+              .en Reconnecting meaning and purpose on professional and personal journey
+            li 
+              .fr L’évolution de son style de leadership en fonction des enjeux et attentes  
+              .en Adjusting its leadership styles to meet expectations of key stakeholders and needs of global context
+
+
         
         .mini-desc-img
           img(src='img/header icons/1to1-icon.svg')
@@ -52,22 +54,21 @@ block content
           
           ul
             li
-              .fr la gestion du changement
+              .fr La gestion du changement
               .en Change management
-
             li
-              .fr le leadership
+              .fr Le leadership
               .en Leadership
-
             li
-              .fr la diversité culturelle et de genre
+              .fr La diversité culturelle et de genre dans des contextes matriciels 
               .en Cultural and gender
-
             li
-              .fr L’Optimisation de la fluidité de la dynamique organisationnelle
+              .fr L’optimisation de la fluidité de la dynamique organisationnelle
               .en Optimising team effectiveness
+            li
+              .fr Cohésion d’équipe 
+              .en Team building 
 
-          
         .mini-desc-img.second-mobile
           img(src='img/header icons/group-faciliation-icon.svg')
 
@@ -80,7 +81,7 @@ block content
             .en Coach Supervision
             
           p 
-            .fr Au coeur de la supervision se trouve la relation entre le coach, le client du coach et le contexte de l’enterprise.
+            .fr Au coeur de la supervision se trouve la relation entre le coach, le client du coach et le contexte de l’entreprise
             .en Core to supervision is the focus in the coaching relationship between the coach, the coachee and the corporate context.
 
           p 
@@ -88,17 +89,20 @@ block content
             .en A One-to-One supervision programme with Evolution Coaching will:
           
           ul
-            li 
+            li
               .fr vous donner un espace de réflexion
               .en Give you a reflective space
-            li 
-              .fr vous sensibilliser vis à vis d’angles morts potentiels
+            li
+              .fr vous sensibiliser vis-à-vis des angles morts potentiels
               .en Raise awareness to the possible blind spots
-            li 
+            li
               .fr vous fournir une étiquette de qualité professionnelle et éthique
               .en Provide a quality assurance label by maintaining professional and ethical standards
+        
+
+        
         
         .mini-desc-img
           img(src='img/header icons/coach-supervision-icon.svg')
   
-  //- .footer
+  .footer
