--- a/views/who.jade
+++ b/views/who.jade
@@ -10,31 +10,37 @@ block content
   
   .description
     .text
-      .fr Anne Roques et la gérante fondatrice de Evolution Coaching.
-      .en Evolution coaching is led by Anne Roques.
+      .fr Evolution Coaching est une plateforme de coaches:
+      .en Evolution coaching is led by Anne Roques:
 
     .list
       ul
-        li
-          .fr Avec plus de 18 ans d'expérience dans le monde du business international, C'est une master coach professionnel qualifiée du International Coach Fédération (ICF)  et un membre associé de la Société Françqise de Coaching.  elle est maître praticien en programmation NeuroLinguistic (NLP)  et une facilitatrice de  “clean  language”.
-          .en We are bilingual-French and multicultural having lives and work outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context
+        li 
+          .fr Nous sommes bilingues Français/Anglais et multicullturels, ayant vécus et travaillés en dehors de notre pays d’origine pendant plusieurs années. Nous coachons souvent en Français et en Anglais dans des contextes globaux et interculturels
+          .en We are bilingual English-French and multicultural having lived and worked outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context
+        li 
+          .fr Nous avons un solide passé dans le business dans divers secteurs, ce qui veut dire que nous comprenons le territoire - souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   
+          .en We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by complexity, pressure and fast-pace
+        li 
+          .fr Nous démontrons et pratiquons l’agilité et la rigueur à travers un style de questionnement minimaliste, cela permet aux clients de trouver leurs propres solutions et les incitent à réagir et agir
+          .en We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action
 
-        li
-          .fr Année aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)
-          .en We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by compleity, pressure and fast-pace
-
-        li
-          .fr Elle est diplômée pour utiliser l’outil HoganLead Assessment,  accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle. 
-          .en We demonstrate and pratice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action
-
-        li
-          .fr Nous démontrons et pratique l'agilité et la rigueur à travers un style de questionnement minimaliste, cela signifie que les clients à trouver leurs propres solutions et sont compétents pour prendre des mesures.
-          .en With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a ckean anguage facilitator
-        
-        li.en Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).
-        
-        li.en She was certified to use the HoganLead Assessment tool (2012)
+        li 
+          .fr Avec plus de 18 ans d'expérience dans le contexte internationale de business, c'est une master coach professionnel qualifiée du International Coach Fédération (ICF) et un membre associé de la Société Française de Coaching
+          .en With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a Clean Language facilitator
+        li 
+          .fr Elle est maître praticien en programmation NeuroLinguistic (NLP) et une facilitatrice de Clean Language
+          .en Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).
+        li 
+          .fr Anne est aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)
+          .en She was certified to use the HoganLead Assessment tool (2012)
+        li 
+          .fr Elle est diplômée pour utiliser l’outil HoganLead Assessment, accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle
+          .en She is a workplace mediator et and an accredited systemic facilitator
   
   .who-image
     img(src='img/photo-1.png')
-  //- .footer
+  .footer
+
+
+  
