--- a/views/how.jade
+++ b/views/how.jade
@@ -15,8 +15,12 @@ block content
             .fr Co-création
             .en Co-creation
           p 
-            .fr Evolution Coaching est unique dans son engagement à la co-crèation. En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes, un dialogue dynamique et flexible émerge pour répondre aux besoins changeants de l’entreprise, l’équipe de leadership et les exécutifs seniors.
-            .en Evolution Coaching is unique in its commitment to co-creation. In providing broad perspectives and working closely with all stakeholders a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives
+            .fr Evolution Coaching est unique dans son engagement vis à vis  de  la Co création.
+            .en Evolution Coaching is unique in its commitment to co-creation.
+          
+          p
+            .fr En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes,  c’est un dialogue constructif qui s’établit pour mieux répondre à des besoins changeants.
+            .en In providing broad perspectives and working closely with all stakeholders a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives
 
         .mini-desc-img
           img(src='img/header icons/co-creation-icon.svg')
@@ -32,8 +36,8 @@ block content
             .en Stop, look, listen
           
           p 
-            .fr Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défi de s’aligner avec leurs soi intérieur et d’être à l’écoute de leur identité. <br/> Ce processus crée une transformation.
-            .en We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenged to become tuned in to their inner-self and to be aligned with their identity. This process created transformational change because the coaches are authentic and human.
+            .fr Nous créons un environnement où le client peut s’arrêter, observer et écouter. En toute confidentialité, celui ci peut être amener à s’aligner avec son soi intérieur afin d’être  mieux à l’écoute de son identité.
+            .en We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenged to become tuned in to their inner-self and to be aligned with their identity. This process created transformational change .
 
 
         .mini-desc-img.second-mobile
@@ -47,7 +51,7 @@ block content
             .en Self-awareness
             
           p 
-            .fr A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté, ce qui énergise. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.
+            .fr A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté et de l’énergie. Accepter sa personne (s’approprier son style de leadership, permettent d’évoluer en tant qu’être humain et leader.
             .en Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energises. A purposeful outcome is identified and provides a roadmap for on-going development. 
 
         .mini-desc-img
@@ -64,10 +68,14 @@ block content
             .en Supervision
             
           p
-            .fr A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final. <br/> Anne et tous les coaches de la plateforme sont en supervision de manière régulière et fréquente (en groupe et/ou en individuel).
-            .en Through the supervision process, meaningful observations are offered in an elegant and respectful manner in order to better serve the final corporate client <br/> She and all the Evolution Coaches are in regular group and individual supervision.
+            .fr A travers le processus de supervision des observations significatives émergent..
+            .en Through the supervision process, meaningful observations are offered in an elegant and respectful manner in order to better serve the final corporate client 
+          
+          p
+            .fr Anne et tous les coaches de la plateforme sont en supervision de manière régulière et fréquente (en groupe et/ou individuellement).
+            .en She and all the Evolution Coaches are in regular group and individual supervision.
 
         .mini-desc-img.second-mobile
           img(src='img/header icons/supervision-icon.svg')
     
-  .footer
+  //- .footer
