--- a/views/what.jade
+++ b/views/what.jade
@@ -12,10 +12,10 @@ block content
       .mini-desc
         .mini-desc-content
           .mini-title.what
-            .fr Un à Un
+            .fr Travail en binôme 
             .en One-to-One
           p 
-            .fr Coaching Exécutif de Leadership un à un
+            .fr Coaching individuel au niveau exécutif 
             .en One-to-One Executive Leadership Coaching
 
           p
@@ -24,15 +24,14 @@ block content
           
           ul
             li 
-              .fr La clarification de la stratégie et l’alignement des priorités et des actions
-              .en Clarification of strategy, alignment of priorities and actions
+              .fr Clarifier une stratégie et aligner les priorités et les actions qui en découlent
+              .en Clarifying strategy and alignment of priorities and actions
             li 
-              .fr Reconnecter au sens de sa vie et le but de son  rôle professionnel 
-              .en Reconnecting meaning and purpose on professional and personal journey
+              .fr Se reconnecter avec ce qui fait sens  tant dans son cheminement professionnel que personnel 
+              .en Reconnecting meaning and purpose on a professional and personal journey
             li 
-              .fr L’évolution de son style de leadership en fonction des enjeux et attentes  
-              .en Adjusting its leadership styles to meet expectations of key stakeholders and needs of global context
-
+              .fr Faciliter l’évolution de son style de leadership en fonction des enjeux et attentes  
+              .en Adjusting one’ s leadership styles to meet the expectations of key stakeholders as well as global context needs
 
         
         .mini-desc-img
@@ -49,7 +48,7 @@ block content
             .en Group facilitation
             
           p
-            .fr Evolution Coaching facilite des petits groupes (max 12) dans des domaines divers tels que:
+            .fr Evolution Coaching facilite des petits groupes (équipes max 12) dans des domaines divers tels que:
             .en Evolution Coaching facilitates small groups (12 max) in areas as diverse as:
           
           ul
@@ -60,10 +59,10 @@ block content
               .fr Le leadership
               .en Leadership
             li
-              .fr La diversité culturelle et de genre dans des contextes matriciels 
-              .en Cultural and gender
+              .fr La diversité culturelle dans des contextes matriciels  spécifiques
+              .en Cultural and organisational design
             li
-              .fr L’optimisation de la fluidité de la dynamique organisationnelle
+              .fr L’optimisation de la dynamique organisationnelle
               .en Optimising team effectiveness
             li
               .fr Cohésion d’équipe 
@@ -90,17 +89,14 @@ block content
           
           ul
             li
-              .fr vous donner un espace de réflexion
+              .fr vous offrir un espace de réflexion
               .en Give you a reflective space
             li
-              .fr vous sensibiliser vis-à-vis des angles morts potentiels
+              .fr vous sensibiliser vis-à-vis d’angles morts potentiels
               .en Raise awareness to the possible blind spots
             li
-              .fr vous fournir une étiquette de qualité professionnelle et éthique
+              .fr vous assurer un label de qualité 
               .en Provide a quality assurance label by maintaining professional and ethical standards
-        
-
-        
         
         .mini-desc-img
           img(src='img/header icons/coach-supervision-icon.svg')
