--- a/views/who.jade
+++ b/views/who.jade
@@ -10,33 +10,26 @@ block content
   
   .description
     .text
-      .fr Evolution Coaching est une plateforme de coaches:
-      .en Evolution coaching is led by Anne Roques:
+      .fr Evolution Coaching est une plateforme de coaches  piloté par Anne Roques:
+      .en Evolution Coaching is led by Anne Roques:
 
     .list
       ul
         li 
-          .fr Nous sommes bilingues Français/Anglais et multicullturels, ayant vécus et travaillés en dehors de notre pays d’origine pendant plusieurs années. Nous coachons souvent en Français et en Anglais dans des contextes globaux et interculturels
+          .fr Bilingues Français/Anglais et multiculturels, nous avons vécus et travaillés hors de notre pays d’origine depuis de nombreuses  pannées. Nos coachings se déroulent souvent  en Français et en Anglais dans des contextes interculturels spécifiques ou globalisés
           .en We are bilingual English-French and multicultural having lived and worked outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context
         li 
-          .fr Nous avons un solide passé dans le business dans divers secteurs, ce qui veut dire que nous comprenons le territoire - souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   
-          .en We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by complexity, pressure and fast-pace
+          .fr Un solide arrière-plan et de nombreuses références dans divers secteurs nous  assurent une bonne compréhension du  territoire de nos interlocuteurs –territoire  souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   
+          .en We have strong business backgrounds across multiple sectors, which means that we understand our clients territory - often characterised by complexity, pressure and fast-pace
         li 
-          .fr Nous démontrons et pratiquons l’agilité et la rigueur à travers un style de questionnement minimaliste, cela permet aux clients de trouver leurs propres solutions et les incitent à réagir et agir
-          .en We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action
-
+          .fr A travers un style de questionnement  minimaliste, permettant à nos clients de trouver leurs propres solutions et ainsi d’agir et de réagir, nous vous accompagnons avec souplesse, doigté et rigueur 
+          .en We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions and thus empowered to take action
         li 
-          .fr Avec plus de 18 ans d'expérience dans le contexte internationale de business, c'est une master coach professionnel qualifiée du International Coach Fédération (ICF) et un membre associé de la Société Française de Coaching
-          .en With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a Clean Language facilitator
+          .fr Avec plus de 18 ans d’expériences dans des groupes internationaux, mon métier  coach réside aujourd’hui dans le savoir être. Une priorité,   et une démarche centrée sur le  COMMENT faire plutôt que sur le QUOI fair.
+          .en With over 18 years in international business, the focus point at the heart of my professional involvement leads me to concentrate my work on the HOW to make things happen rather that WHAT  to do 
         li 
-          .fr Elle est maître praticien en programmation NeuroLinguistic (NLP) et une facilitatrice de Clean Language
-          .en Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).
-        li 
-          .fr Anne est aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)
-          .en She was certified to use the HoganLead Assessment tool (2012)
-        li 
-          .fr Elle est diplômée pour utiliser l’outil HoganLead Assessment, accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle
-          .en She is a workplace mediator et and an accredited systemic facilitator
+          .fr Mon parcours professionnel, comme mon cheminement personnel, sont marqués d’influences diverses, de rencontres, de formations, de moments d’inspirations mais aussi de prises de recul et d’espaces de développement
+          .en My on going journey, both professionally and personally, has been influences by meeting outstanding individual s- whether trainers or inspirational speakers – and by times of personal development when standing back to reflect is also a must
   
   .who-image
     img(src='img/photo-1.png')
