--- a/views/contact.jade
+++ b/views/contact.jade
@@ -14,7 +14,7 @@ block content
       span Phone:
         ul.phone-list
           li UK: +44 (0) 7971 534 005
-          li France: +33 (0) 6971 638 895
+          li France: (33) 671639895
 
     .contact-img
       img(src='img/header icons/contact-icon.svg')
