--- a/views/how.jade
+++ b/views/how.jade
@@ -4,7 +4,7 @@ block content
   
   .title.how: span
     span
-      .fr Comment le faisons?
+      .fr Comment le faisons nous?
       .en How do we do it?
   
   .description
@@ -20,7 +20,7 @@ block content
           
           p
             .fr En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes,  c’est un dialogue constructif qui s’établit pour mieux répondre à des besoins changeants.
-            .en In providing broad perspectives and working closely with all stakeholders a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives
+            .en In providing broad perspectives and working closely with all stakeholders, a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives
 
         .mini-desc-img
           img(src='img/header icons/co-creation-icon.svg')
@@ -51,7 +51,7 @@ block content
             .en Self-awareness
             
           p 
-            .fr A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté et de l’énergie. Accepter sa personne (s’approprier son style de leadership, permettent d’évoluer en tant qu’être humain et leader.
+            .fr A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté et de l’énergie. Accepter sa personne s’approprier son style de leadership, permettent d’évoluer en tant qu’être humain et leader.
             .en Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energises. A purposeful outcome is identified and provides a roadmap for on-going development. 
 
         .mini-desc-img
@@ -68,7 +68,7 @@ block content
             .en Supervision
             
           p
-            .fr A travers le processus de supervision des observations significatives émergent..
+            .fr A travers le processus de supervision des observations significatives emergent..
             .en Through the supervision process, meaningful observations are offered in an elegant and respectful manner in order to better serve the final corporate client 
           
           p
