--- a/views/what.jade
+++ b/views/what.jade
@@ -48,7 +48,7 @@ block content
             .en Group facilitation
             
           p
-            .fr Evolution Coaching facilite des petits groupes (équipes max 12) dans des domaines divers tels que:
+            .fr Evolution Coaching facilite des petits groupes équipes (max 12) dans des domaines divers tels que:
             .en Evolution Coaching facilitates small groups (12 max) in areas as diverse as:
           
           ul
@@ -65,7 +65,7 @@ block content
               .fr L’optimisation de la dynamique organisationnelle
               .en Optimising team effectiveness
             li
-              .fr Cohésion d’équipe 
+              .fr La cohésion d’équipe 
               .en Team building 
 
         .mini-desc-img.second-mobile
