--- a/views/who.jade
+++ b/views/who.jade
@@ -16,7 +16,7 @@ block content
     .list
       ul
         li 
-          .fr Bilingues Français/Anglais et multiculturels, nous avons vécus et travaillés hors de notre pays d’origine depuis de nombreuses  pannées. Nos coachings se déroulent souvent  en Français et en Anglais dans des contextes interculturels spécifiques ou globalisés
+          .fr Bilingues Français/Anglais et multiculturels, nous avons vécus et travaillés hors de notre pays d’origine depuis de nombreuses  années. Nos coachings se déroulent souvent  en Français et en Anglais dans des contextes interculturels spécifiques ou globalisés
           .en We are bilingual English-French and multicultural having lived and worked outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context
         li 
           .fr Un solide arrière-plan et de nombreuses références dans divers secteurs nous  assurent une bonne compréhension du  territoire de nos interlocuteurs –territoire  souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   
@@ -25,11 +25,11 @@ block content
           .fr A travers un style de questionnement  minimaliste, permettant à nos clients de trouver leurs propres solutions et ainsi d’agir et de réagir, nous vous accompagnons avec souplesse, doigté et rigueur 
           .en We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions and thus empowered to take action
         li 
-          .fr Avec plus de 18 ans d’expériences dans des groupes internationaux, mon métier  coach réside aujourd’hui dans le savoir être. Une priorité,   et une démarche centrée sur le  COMMENT faire plutôt que sur le QUOI fair.
+          .fr Avec plus de 18 ans d’expériences dans des groupes internationaux, mon métier  coach réside aujourd’hui dans le savoir être. Une priorité,   et une démarche centrée sur le  COMMENT faire plutôt que sur le QUOI faire.
           .en With over 18 years in international business, the focus point at the heart of my professional involvement leads me to concentrate my work on the HOW to make things happen rather that WHAT  to do 
         li 
           .fr Mon parcours professionnel, comme mon cheminement personnel, sont marqués d’influences diverses, de rencontres, de formations, de moments d’inspirations mais aussi de prises de recul et d’espaces de développement
-          .en My on going journey, both professionally and personally, has been influences by meeting outstanding individual s- whether trainers or inspirational speakers – and by times of personal development when standing back to reflect is also a must
+          .en My on going journey, both professionally and personally, has been influenced by meeting outstanding individual s- whether trainers or inspirational speakers – and by times of personal development when standing back to reflect is also a must
   
   .who-image
     img(src='img/photo-1.png')
