--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -14,7 +14,6 @@ base()
 
 body
   font-family 'AvenirLTStd-Medium', sans-serif !important
-  padding 0 30px 0 30px
 
 #content
   max-width 1000px
@@ -71,12 +70,28 @@ body
 .show
   display block
 
-.footer
+#footer
   background-image url("/img/Logos/footer.svg")
   background-repeat no-repeat
-  background-size contain
+  background-size inherit
   background-position center
+  width 100%
+  margin 0 auto
+  margin-top 200px
+  height 150px
 
 @media screen and (max-width: 884px)
   #content
     padding 0
+
+.home-page-footer, .who-page-footer
+  background-color #8baf1a
+
+.what-page-footer
+  background-color #5377b9
+
+.how-page-footer
+  background-color #eb6477
+
+.contact-page-footer
+  background-color #c078af
