--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,17 @@ extends layout
 
 block content
   
+  .center(style='color: #8baf1a; margin-top: 70px')
+    h1 English and French business coaching
+    h1 - with a personal touch
+  
   .home-video
     video(controls): source(src="videos/video.mp4" type="video/mp4")
+      
+  .center(style='color: #8baf1a') 
+    h1 "The heart of my profession
+    h1 is to focus on the How, not the What"
+    p My journey has been influenced by meeting with exceptional individuals, training accrediting processes, inspirational speakers, reflective time and personal development journeys on my personal and professional life experiences.
+
+  .footer
+    
