--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -82,7 +82,7 @@ body
 
 @media screen and (max-width: 884px)
   #content
-    padding 0
+    margin 5px
 
 .home-page-footer, .who-page-footer
   background-color #8baf1a
