--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -45,6 +45,7 @@
   .description
     .mini-title
       font-size 40px
+      text-align center
 
     .item
       margin 40px 0
@@ -92,6 +93,13 @@
     .description .mini-desc .mini-desc-content,
     .description .mini-desc .mini-desc-img
       width 100% !important
+
+    .mini-desc
+      display flex
+      flex-direction column-reverse
+
+    .mini-desc-content
+      margin-top 15px
 
 .how-page
   .description .item .mini-desc .mini-desc-img
