--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -44,6 +44,7 @@
 .what-page .description .mini-title,
 .how-page .description .mini-title {
   font-size: 40px;
+  text-align: center;
 }
 .what-page .description .item,
 .how-page .description .item {
@@ -105,6 +106,20 @@
   .what-page .description .mini-desc .mini-desc-img,
   .how-page .description .mini-desc .mini-desc-img {
     width: 100% !important;
+  }
+  .what-page .mini-desc,
+  .how-page .mini-desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .what-page .mini-desc-content,
+  .how-page .mini-desc-content {
+    margin-top: 15px;
   }
 }
 .how-page .description .item .mini-desc .mini-desc-img img {
