--- a/assets/css/navbar.styl
+++ b/assets/css/navbar.styl
@@ -11,6 +11,7 @@
   transform: translateX(-50%);
   z-index: 1000;
   background: white;
+  margin-bottom: 0px
 
   .logo
     width 80px
@@ -51,7 +52,6 @@
       color #8E8E8D
       vertical-align middle
       cursor pointer
-      margin-left 40px
 
 @media screen and (max-width: 963px)
   #navbar
