--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -27,6 +27,9 @@
     display inline-block
     text-align center
 
+    img
+      width 100%
+
   @media screen and (max-width: 852px)
       .description
         width 100%
