--- a/views/who.jade
+++ b/views/who.jade
@@ -32,7 +32,7 @@ block content
           .en My on going journey, both professionally and personally, has been influenced by meeting outstanding individual s- whether trainers or inspirational speakers – and by times of personal development when standing back to reflect is also a must
   
   .who-image
-    img(src='img/photo-1.png')
+    img(src='img/photo-1.jpg')
   .footer
 
 
